Refactor security/auth, order APIs; remove cart
Large refactor: add spring-boot-oauth2-resource-server dependency and enable method-level security and custom auth entry handling. Extract userId from JWT (JwtUtil.extractUserId) and set it on requests in JwtAuthFilter. Harden controller access with @PreAuthorize annotations and adjust product/category/coupon/image endpoints. Remove cart feature (controllers, DTOs, repositories, service impls) and related DTOs. Rework order APIs: change route to /api/order, createOrder uses request attribute userId, add admin list endpoint and mark-paid flow; PaymentController now passes client IP and uses markPair for successful payments. Simplify AuthController/EmailService verify flow (returns message, updated verify link) and tighten validation/messages: many AppException/ErrorCode usages replaced with runtime errors and clearer messages. Misc: DTO/property tweaks (LoginResponse/ RegisterRequest/OrderResponse), repository signature updates, mapper/service cleanups and other minor fixes.